Mail para cuenta bloqueada

--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -27,11 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.activation.jar=..\\activation.jar
+file.reference.javax.mail.jar=..\\javax.mail.jar
 file.reference.mysql-connector.jar=C:\\Users\\Usuario\\Documents\\NetBeansProjects\\JavaBsesDatos\\mysql-connector.jar
+file.reference.mysql-connector.jar-1=..\\mysql-connector.jar
+file.reference.smtp-1.6.2.jar=..\\smtp-1.6.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector.jar}
+    ${file.reference.mysql-connector.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.mysql-connector.jar-1}:\
+    ${file.reference.smtp-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
