--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -39,7 +39,8 @@ javac.classpath=\
     ${file.reference.activation.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.mysql-connector.jar-1}:\
-    ${file.reference.smtp-1.6.2.jar}
+    ${file.reference.smtp-1.6.2.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
