--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/Proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.activation.jar=..\\activation.jar
+file.reference.itext-5.0.5.jar=..\\itext-5.0.5.jar
 file.reference.javax.mail.jar=..\\javax.mail.jar
 file.reference.mysql-connector.jar=C:\\Users\\Usuario\\Documents\\NetBeansProjects\\JavaBsesDatos\\mysql-connector.jar
 file.reference.mysql-connector.jar-1=..\\mysql-connector.jar
@@ -40,7 +41,8 @@ javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.mysql-connector.jar-1}:\
     ${file.reference.smtp-1.6.2.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.itext-5.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
