--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /Proyecto/nbproject/private/
 /Proyecto/build/
-/Proyecto/Source Packages/ModuloLogin/ConectarBase.java
+/Proyecto/src/ModuloLogin/ConectarBase.java
